package com.directi.training.dip.exercise;

public interface DataDestination {
int write(String data);
}
