package com.directi.training.dip.exercise;

public interface Encoder {
	 String encode(String input);
}
